--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -115,3 +115,13 @@ th{
 .total-in-car{
   margin-top: 7px;
 }
+
+.dropdown-submenu {
+  position: relative;
+}
+
+.dropdown-submenu .dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-top: -1px;
+}
