--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,27 +1,13 @@
 <div class="jumbotron">
-  <h1>Tiendas <strong>El Baratón</strong></h1>
+  <h1>Tiendas
+    <strong>El Baratón</strong>
+  </h1>
   <h3 class="text-center">Gracias por elegirnos</h3>
-<!--
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
--->
+  <h1>
+    <span class="glyphicon glyphicon-list-alt text-success"></span>
+    <span class="glyphicon glyphicon-glass text-success"></span>
+    <span class="glyphicon glyphicon-cutlery text-success"></span>
+    <span class="glyphicon glyphicon-apple text-success"></span>
+    <span class="glyphicon glyphicon-piggy-bank text-success"></span>
+  </h1>
 </div>
-<!--
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
--->
