--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -47,14 +47,6 @@ body {
   border-bottom: 1px solid #e5e5e5;
 }
 
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-}
-.marketing p + h4 {
-  margin-top: 28px;
-}
-
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container-body{
@@ -76,28 +68,6 @@ body {
   .jumbotron {
     border-bottom: 0;
   }
-}
-
-.navbar-fixed-left {
-  width: 140px;
-  position: fixed;
-  border-radius: 0;
-  height: 100%;
-}
-
-.navbar-fixed-left .navbar-nav > li {
-  float: none;  /* Cancel default li float: left */
-  width: 139px;
-}
-
-.navbar-fixed-left + .container {
-  padding-left: 160px;
-}
-
-/* On using dropdown menu (To right shift popuped) */
-.navbar-fixed-left .navbar-nav > li > .dropdown-menu {
-  margin-top: -50px;
-  margin-left: 140px;
 }
 
 .pointer{
@@ -124,4 +94,13 @@ th{
   top: 0;
   left: 100%;
   margin-top: -1px;
+}
+
+.panel-color{
+  background-color: #eee;
+}
+
+button:disabled,
+button[disabled]{
+  background-color: #5cb85c !important;
 }
